[package]
name = "rust_oracle_performance"
version = "0.1.0"
edition = "2018"

[profile.release]
debug = true

[dependencies]
oracle = "^0.5"
r2d2 = "^0.8"
r2d2-oracle = "^0.5"
tokio = { version = "^1.11", features = ["rt", "rt-multi-thread"] }
futures = "^0.3"
clap = "^2.33"
anyhow = "^1.0"
num_cpus = "^1.13"